# kkoma-slack

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE.md  README.md  docker-compose.yml  pyproject.toml  requirements-data.txt  requirements.txt  slack-manifest.yml
.github/workflows/: deploy.yml
data/en/: secrets.txt
docs/superpowers/plans/: 2026-06-10-aws-ec2-terraform-deploy.md
docs/superpowers/specs/: 2026-06-10-aws-ec2-terraform-deploy-design.md  2026-06-25-sema-english-semantle-design.md
kkoma_slack/: app.py  commands.py  config.py  semantle_engine.py  slack_app.py  storage.py
scripts/: bootstrap_data.sh  build_unfiltered_dictionary.py  filter_words.py  process_vecs.py
tests/: test_commands.py  test_dates.py  test_english_engine.py  test_semantle_engine.py  test_slack_app.py  test_storage.py
