[project]
name = "kkoma-slack"
version = "0.1.0"
description = "A Slack slash-command app for playing Korean Semantle together."
requires-python = ">=3.11"
dependencies = [
  "Flask==3.0.3",
  "gunicorn==22.0.0",
  "numpy==1.26.4",
  "python-dotenv==1.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
